# demo

./: README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
.github/workflows/jobs/: build.yml  deploy.yml  test.yml
tests/: test_arithmetic.py
